--- a/app/src/main/res/layout/activity_setting2.xml
+++ b/app/src/main/res/layout/activity_setting2.xml
@@ -10,26 +10,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="I want to be reminded"
+        android:text="Remind me to go to bed"
         android:id="@+id/when"
-        android:layout_below="@+id/numberPicker1"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentEnd="false" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/min"
-        android:layout_toEndOf="@id/when"
-        />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
-    <NumberPicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/numberPickerTime"
-        android:layout_below="@+id/when"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="49dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -45,6 +30,34 @@
         android:id="@+id/editText"
         android:inputType="text"
         android:layout_above="@+id/buttonFinished"
-        android:layout_alignParentStart="true" />/>
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Edit your custom sleep reminder"
+        android:id="@+id/edit"
+        android:layout_above="@+id/editText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/helper"
+        android:layout_marginTop="152dp"
+        android:layout_toEndOf="@+id/numberPickerTime"
+        android:text="minutes" />
+
+    <NumberPicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/numberPickerTime"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/when"
+        android:layout_marginTop="50dp" />
+
 
 </RelativeLayout>
