--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -102,7 +102,8 @@
         android:text="Continue"
         android:id="@+id/buttonContinue"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        style="@style/buttons" />
 
 
 </RelativeLayout>
