--- a/app/src/main/res/drawable/button_pressed.xml
+++ b/app/src/main/res/drawable/button_pressed.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+        android:shape="rectangle" >
 
     <solid
         android:color="#FFFFFF" />
@@ -14,7 +13,7 @@
         android:bottomRightRadius="7dp" />
 
     <gradient
-        android:endColor="#000099"
+        android:endColor="#3390B2"
         android:startColor="#000000" />
 
     <padding
@@ -22,5 +21,9 @@
         android:top="1dp"
         android:right="1dp"
         android:bottom="1dp" />
+    <stroke
+        android:width="2dip"
+        android:color="#00FF00" />
+
 
 </shape>
