--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,10 @@
         android:layout_height="wrap_content"
         android:text="Profiles"
         android:id="@+id/buttonProfiles"
-        android:background="@drawable/button_steez"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        style="@style/main_buttons" />
 
     <Button
         android:layout_width="wrap_content"
@@ -24,9 +24,9 @@
         android:text="Set a New Alarm"
         android:id="@+id/buttonTest"
         android:clickable="true"
-        android:background="@drawable/button_steez"
         android:layout_above="@+id/buttonProfiles"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        style="@style/main_buttons" />
 
 
 </RelativeLayout>
